--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cou # add code here"
+    "countries['New Mexico'] # add code here"
    ]
   },
   {
