Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        " 'USA',\n",
        " 'Morocco',\n",
        " 'New Mexico',\n",
-       " 'Finland',\n",
+       " 'USA',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
@@ -299,7 +299,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
