Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        " 'USA',\n",
        " 'Morocco',\n",
        " 'USA',\n",
-       " 'USA',\n",
+       " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
@@ -350,7 +350,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
