--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,25 +448,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
+       "['Finland',\n",
+       " 'Morocco',\n",
+       " 'Italy',\n",
        " 'Canada',\n",
        " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'Malta',\n",
+       " 'USA']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
